--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
     font-family: Arial;
     text-align: center;
-    background: url("BG.png") repeat-x;
-    background-size: 820px auto; /* width 200px, height auto */
     margin: 0;
     color: white;
+    background-color: black;
 }
+
 
 
 .game-container {
@@ -55,3 +55,4 @@ body {
     font-weight: bold;
     margin-top: 10px;
 }
+
