--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
     font-family: Arial;
     text-align: center;
+    background: url("BG.png") repeat-x;
+    background-size: 820px auto; /* width 200px, height auto */
     margin: 0;
     color: white;
-    background-color: black;
 }
+
 
 
 
@@ -55,4 +57,5 @@ body {
     font-weight: bold;
     margin-top: 10px;
 }
+
 
